; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_mevent_test.c_timer_print.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_mevent_test.c_timer_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT64_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"machdep.tsc_freq\00", align 1
@TEVSZ = common dso_local global i32 0, align 4
@tevbuf = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [51 x i8] c"timers done: usecs, min %llu, max %llu, mean %llu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @timer_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_print() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = load i32, i32* @UINT64_MAX, align 4
  store i32 %8, i32* %1, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  store i64 4, i64* %6, align 8
  %9 = call i32 @sysctlbyname(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32* %5, i64* %6, i32* null, i32 0)
  store i32 1, i32* %7, align 4
  br label %10

10:                                               ; preds = %45, %0
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @TEVSZ, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %48

14:                                               ; preds = %10
  %15 = load i32*, i32** @tevbuf, align 8
  %16 = load i32, i32* %7, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** @tevbuf, align 8
  %21 = load i32, i32* %7, align 4
  %22 = sub nsw i32 %21, 1
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %20, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = sub nsw i32 %19, %25
  %27 = mul nsw i32 %26, 1000000
  %28 = load i32, i32* %5, align 4
  %29 = sdiv i32 %27, %28
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* %4, align 4
  %32 = add nsw i32 %31, %30
  store i32 %32, i32* %4, align 4
  %33 = load i32, i32* %1, align 4
  %34 = load i32, i32* %3, align 4
  %35 = icmp sgt i32 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %14
  %37 = load i32, i32* %3, align 4
  store i32 %37, i32* %1, align 4
  br label %38

38:                                               ; preds = %36, %14
  %39 = load i32, i32* %2, align 4
  %40 = load i32, i32* %3, align 4
  %41 = icmp slt i32 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %38
  %43 = load i32, i32* %3, align 4
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %42, %38
  br label %45

45:                                               ; preds = %44
  %46 = load i32, i32* %7, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %7, align 4
  br label %10

48:                                               ; preds = %10
  %49 = load i32, i32* %1, align 4
  %50 = load i32, i32* %2, align 4
  %51 = load i32, i32* %4, align 4
  %52 = load i32, i32* @TEVSZ, align 4
  %53 = sub nsw i32 %52, 1
  %54 = sdiv i32 %51, %53
  %55 = call i32 @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %49, i32 %50, i32 %54)
  ret void
}

declare dso_local i32 @sysctlbyname(i8*, i32*, i64*, i32*, i32) #1

declare dso_local i32 @printf(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
